card alignment fixed

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -8,7 +8,7 @@
 .card__flex {
   display: flex;
   flex-flow: column wrap;
-  justify-content: center; 
+  justify-content: flex-start; 
 
   row-gap: 0.5rem;
 }
