--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,7 +1,7 @@
 .gallery__grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  align-items: flex-start;
+  align-items: stretch;
 
   row-gap: 30px;
   column-gap: 15px;
